Fix misalignment on #anchors due to fixing header.

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+html {
+  scroll-padding-top: 5rem; /* adjust to match your header height */
+}
